# LR-FrameFlow

./: .gitignore  CLAUDE.md  README.md  TODO.md
.github/workflows/: ci.yml
apps/bridge/: Cargo.toml  README.md
apps/bridge/src/: main.rs
apps/lr-plugin/: README.md
docs/adr/: 000-template.md  001-async-queue-orchestration.md  002-bridge-tauri.md  003-redis-dlq-and-import-rules.md
docs/plan/: mvp.md
infra/compose/: README.md  docker-compose.yml  env.example
infra/compose/postgres-init/: 01-enable-pgvector.sql
infra/migrations/: README.md  alembic.ini  env.py
infra/migrations/versions/: 001_create_jobs.py  002_create_photos.py  003_create_profiles.py  004_create_feature_vectors.py  005_create_edit_results.py  006_add_profile_id_started_at_to_jobs.py  007_update_feature_vector_dim.py
libs/domain/: README.md  pyproject.toml
libs/domain/src/lr_frameflow_domain/: __init__.py  jobs.py  profiles.py
libs/edit-serializer/: README.md  pyproject.toml
libs/edit-serializer/src/lr_edit_serializer/: __init__.py
libs/inference-pipeline/: README.md  pyproject.toml
libs/inference-pipeline/src/lr_frameflow_inference_pipeline/: __init__.py  features.py  model.py
libs/inference-pipeline/tests/: test_pipeline.py
libs/lr-io/: README.md  pyproject.toml
libs/lr-io/src/lr_io/: __init__.py
libs/observability/: README.md  pyproject.toml
libs/observability/src/lr_frameflow_observability/: __init__.py  heartbeat.py  json_formatter.py  request_id.py
libs/persistence/: README.md  pyproject.toml
libs/persistence/src/lr_frameflow_persistence/: __init__.py  models.py  reaper.py  session.py
libs/persistence/src/lr_frameflow_persistence/repositories/: __init__.py  edit_results.py  feature_vectors.py  jobs.py  photos.py  profiles.py
libs/queue/: README.md  pyproject.toml
libs/queue/src/lr_frameflow_queue/: __init__.py  constants.py  consumer.py  envelope.py  publisher.py
scripts/: validate_contracts.py
services/api/: README.md  pyproject.toml
services/api/src/lr_frameflow_api/: __init__.py  deps.py  main.py  middleware.py  schemas.py  storage.py
services/api/tests/: conftest.py  test_jobs.py  test_photos.py
services/workers/feature_worker/: pyproject.toml
services/workers/feature_worker/src/lr_frameflow_feature_worker/: __init__.py  cli.py
services/workers/inference_worker/: pyproject.toml
services/workers/inference_worker/src/lr_frameflow_inference_worker/: __init__.py  cli.py
services/workers/train_worker/: pyproject.toml
services/workers/train_worker/src/lr_frameflow_train_worker/: __init__.py  cli.py
