[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lr-frameflow-lr-io"
version = "0.1.0"
description = "Shared path/metadata helpers for LR-FrameFlow"
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
