[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lr-frameflow-persistence"
version = "0.1.0"
description = "SQLAlchemy models and repositories for LR-FrameFlow"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "lr-frameflow-domain",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8", "alembic>=1.14"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
