[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lr-frameflow-queue"
version = "0.1.0"
description = "Redis queue publisher/consumer wrappers and job envelopes"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "lr-frameflow-domain",
  "pydantic>=2.10",
  "redis>=5.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
