[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lr-frameflow-api"
version = "0.1.0"
description = "Thin FastAPI gateway for LR-FrameFlow jobs"
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "pydantic>=2.10"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.28", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
