[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lr-frameflow-worker-feature"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lr-frameflow-domain",
    "lr-frameflow-persistence",
    "lr-frameflow-queue",
    "lr-frameflow-observability",
]

[project.scripts]
lr-ff-feature-worker = "lr_frameflow_feature_worker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
