[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lr-frameflow-worker-inference"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lr-frameflow-domain",
    "lr-frameflow-persistence",
    "lr-frameflow-queue",
    "lr-frameflow-observability",
    "lr-frameflow-inference-pipeline",
    "boto3>=1.35",
]

[project.scripts]
lr-ff-inference-worker = "lr_frameflow_inference_worker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
